--- a/src/app/features/shop-list/shop-list.component.scss
+++ b/src/app/features/shop-list/shop-list.component.scss
@@ -38,6 +38,17 @@
     }
   }
 
+  &__actions {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    width: 100%;
+
+    @media (min-width: 600px) {
+      width: auto;
+    }
+  }
+
   &__image {
     width: 80px;
     height: 80px;
